# Blog-Djnago-Project

./: README.md
Blog_Django_Project/: db.sqlite3  pyproject.toml
Blog_Django_Project/Details_Project/: admin.txt
Blog_Django_Project/boards/: models.py  serializers.py  views.py
Blog_Django_Project/boards/migrations/: 0001_initial.py
Blog_Django_Project/posts/: models.py  serializers.py  views.py
Blog_Django_Project/posts/migrations/: 0001_initial.py  0002_post_created_by.py
Blog_Django_Project/server/: settings.py  urls.py
Blog_Django_Project/topics/: models.py  serializers.py  views.py
Blog_Django_Project/topics/migrations/: 0001_initial.py  0002_topic_created_by.py
Blog_Django_Project/users/: serializers.py  views.py
